# Kurs

./: .travis.yml  CMakeLists.txt  CMakeLists.txt~  insert.cpp  main.cpp  main.cpp~  merge.cpp  piramyd.cpp  quick.cpp
include/: CMakeLists.txt~  insert.cpp~  merge.cpp~
lib/: CMakeLists.txt  CMakeLists.txt~  piramyd.cpp~  quick.cpp~  quick.h~
tests/: main.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/_3rdParty/Hunter/config-id/: config.cmake
tmp/lib/: Makefile  cmake_install.cmake
